--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-
+<p>This is an example of a simple HTML page with one paragraph.</p>
 <!-- particles.js container -->
 <div id="particles-js"></div>
 
