--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 
 <body>
-<p>This is an example of a simple HTML page with one paragraph.</p>
+<div id="text">
+  <p>This is an example of a simple HTML page with one paragraph.</p>
+</div>
 <!-- particles.js container -->
 <div id="particles-js"></div>
 
